--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,9 @@ importlib-resources = "5.10.0"
 ipdb = "0.13.9"
 pytest = "7.2.0"
 sqlalchemy-serializer = "1.4.1"
+and = "*"
+pipenv = "*"
+shell = "*"
 
 [dev-packages]
 
